--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
         <title>BHDT - Tiến Linh</title>
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="assets/layout/images/logo.png"
+        />
         <link
             id="theme-css"
             rel="stylesheet"
