--- a/src/index.html
+++ b/src/index.html
@@ -16,19 +16,30 @@
             type="text/css"
             href="assets/layout/styles/theme/lara-light-indigo/theme.css"
         />
-        <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-        <link href="/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-        <link href="/assets/vendor/quill/quill.snow.css" rel="stylesheet">
-        <link href="/assets/vendor/quill/quill.bubble.css" rel="stylesheet">
-        <link href="/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-        <link href="/assets/vendor/simple-datatables/style.css" rel="stylesheet">
-    
+        <link
+            href="/assets/vendor/bootstrap/css/bootstrap.min.css"
+            rel="stylesheet"
+        />
+        <link
+            href="/assets/vendor/bootstrap-icons/bootstrap-icons.css"
+            rel="stylesheet"
+        />
+        <link
+            href="/assets/vendor/boxicons/css/boxicons.min.css"
+            rel="stylesheet"
+        />
+        <link href="/assets/vendor/quill/quill.snow.css" rel="stylesheet" />
+        <link href="/assets/vendor/quill/quill.bubble.css" rel="stylesheet" />
+        <link href="/assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+        <link
+            href="/assets/vendor/simple-datatables/style.css"
+            rel="stylesheet"
+        />
+
         <link href="/assets/css/stylecustom.css" rel="stylesheet" />
     </head>
 
-<body>
-    <app-root></app-root>
-</body>
-
+    <body>
+        <app-root></app-root>
+    </body>
 </html>
